Remove bartending section and fix footer hours spacing

--- a/sass/theme/partials/_footer.scss
+++ b/sass/theme/partials/_footer.scss
@@ -10,6 +10,7 @@
 		margin-right: 10px;
 		@media (max-width: $md) {
 			text-align: center;
+			width: 100%;
 		}
 		@media (min-width: $lg) {
 			margin-right: 20px;
